fix: Low-contrast text

--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -23,6 +23,10 @@
   }
 
   .settings-time {
-    margin: 0 10px;
+    margin: 0 14px;
+
+    &-controls-btn {
+      margin: 0 10px;
+    }
   }
 }
