--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,9 +1,8 @@
-$background-color-pomodoro: #F54F43;
-$background-color-break: #3d9e40;
+$background-color-pomodoro: #B30F0A;
+$background-color-break: #276227;
 $default-font-family: 'PT Sans', sans-serif;
-$default-color: #F8F8F8;
-$white: #FFFFFF;
+$default-color: #FFFFFF;
 $btn-hover-gradient: linear-gradient(to top,rgba(255,255,255,.15),rgba(255,255,255,.10) 90%);
 $btn-active-gradient: linear-gradient(to top,rgba(255,255,255,.25),rgba(255,255,255,.15) 90%);
-$block-box-shadow: 0 10px 20px rgba(100, 100, 100,.15), 0 6px 6px rgba(100, 100, 100,.19);
-$block-border: 1px solid rgba(100, 100, 100,.2);
+$block-box-shadow: 0 10px 20px rgba(50, 50, 50,.15), 0 6px 6px rgba(50, 50, 50,.19);
+$block-border: 1px solid rgba(50, 50, 50,.2);
