--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,7 +30,7 @@ body {
   appearance: none;
   background-color: transparent;
   cursor: pointer;
-  border: 2px solid $white;
+  border: 2px solid $default-color;
   border-radius: 2px;
   opacity: 1;
   transition: opacity 2s;
@@ -114,7 +114,7 @@ body {
         border: none;
         cursor:pointer;
         outline:none;
-        color: $white;
+        color: $default-color;
         font-size: 24px;
         margin: 0 10px;
 
